testsuite/tests/th/T11145.stderr

T11145.hs:8:1: error:
    • Couldn't match type ‘Bool’ with ‘(a0, b0)’
      Expected: Fuggle Int (Maybe (a0, b0))
        Actual: Fuggle Int (Maybe Bool)
    • In the result type of data constructor ‘MkFuggle’
      In the data instance declaration for ‘Fuggle’
